to add nillable support

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,3 +2,4 @@ Model
 - add min/max on attributes that were skipped in < oval defs schemas
 - lots & lots of tests
 - flesh out xs simple types
+- nillable attribute
